finished Doctor, Visit and Patient

--- a/doctor/updateDoctor.html
+++ b/doctor/updateDoctor.html
@@ -10,13 +10,13 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Patient Palooza</h2>
+                <h2 class="logo">Doctor Palooza</h2>
             </div>
 
             <div class="menu">
                 <ul>
                   <li><a href="../Index.html">HOME</a></li>
-                  <li><a href="doctorList.html">SEARCH DOCTOR</a></li>
+                  <li><a href="doctorList.php">SEARCH DOCTOR</a></li>
                   <li><a href="deleteDoctor.html">DELETE</a></li>
                   <li><a href="addDoctor.html">ADD</a></li>
                   <li class="active">UPDATE</a></li>
@@ -30,7 +30,7 @@
         <h1><span>Update Doctor Information</span></h1>
         <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
 
-      <div class="form4">
+      <div class="formDoctorAdd">
         <form action="Doctor.php" method="post" id="updateDoctor">
           <label for="doctorId">ID:</label>
           <input type="text" id="doctorId" name="doctorId" required>
