finished all Screens With Functionality

--- a/doctor/updateDoctor.html
+++ b/doctor/updateDoctor.html
@@ -31,7 +31,7 @@
         <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
 
       <div class="formDoctorAdd">
-        <form action="Doctor.php" method="post" id="updateDoctor">
+        <form action="doctor.php" method="post" id="updateDoctor">
           <label for="doctorId">ID:</label>
           <input type="text" id="doctorId" name="doctorId" required>
 
