--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<title>About Us | Patient Palooza</title>
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css?v=2" />
+    <link rel="icon" href="1.ico" type="image/x-icon">
 </head>
 <body>
     <div class="main">
