--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,9 @@
 
         </div> 
         <div class="content">
-            <h1>Click, Rent, Save<br><span>Textbook Rentals</span> <br>Delivered to your door</h1>
-            <p class="par">The ultimate destination for book lovers <br>Enter a world of wonder with Read-iculous, where you'll find a vast collection of enthralling stories
-                <br> a quae totam ipsa illum minus laudantium?</p>
+            <h1>Healing, For Everyone<br><span>Hospital System</span> <br>your health is our wealth</h1>
+            <p class="par">You health services <br> One life is enough, Live life to the fullest in Palooza
+                <br>Carita en scientia</p>
 
                     <button class="btnn" onclick="window.location.href = 'patient/patientList.php';">Patient list</button>
                     <button class="btnn" onclick="window.location.href = 'visit/visitList.php';">Visit list</button>
