--- a/about.html
+++ b/about.html
@@ -26,22 +26,12 @@
 	
         <div class="content">
 		<h1><span><center>About Us</center></span></h1>
-
-		<p class="par" >We are a team of experienced professionals dedicated to providing high-quality Books to our clients. Our company was founded with a mission to help BookLovers find the perfect book to rent.</p>
-
-		<h2><span><center>Our Mission</center></span></h2>
-
-		<p class="par">Our mission is to provide our clients with Quality books at Low Price. We are committed to delivering high-quality services that exceed our clients' expectations.</p>
-
-
-        <h2><span><center>Our Team</center></span></h2>
-
-		<p class="par">Our team consists of experienced professionals with expertise in various aspects. We have a diverse team that brings a unique perspective to our work, and we are committed to fostering a collaborative and inclusive work environment.</p>
+        <p class="par">Members: </p>
+        <p class="par">Mr. Paul Irvin Alas</p>
+        <p class="par">Mr.  Christian Morales</p>
+        <h2><span><center>Project in Spe Elec 2 A</center></span></h2>
 
 	
-        <h2><span><center>Why Choose Us</center></span></h2>
-
-		<p class="par">At our company, we are committed to delivering exceptional services to our clients. Here are some reasons why you should choose us:</p>
 
 		<ul>
 				<li>Experienced professionals with expertise in various aspects</li>
