--- a/service.html
+++ b/service.html
@@ -25,28 +25,29 @@
         </div> 
         <div class="content">
             <h1><span><center>Our Services</center></span></h1>
+            <p class="par">In Palooza we ensure your health as health care provider. We are here to serve you always!</p>
 
             <div class="services">
                 <div class="service-item">
                     <div class="icons">
                         <ion-icon name="newspaper-outline"></ion-icon>
                     </div>
-                    <h2><span><center>Book Rentals</center></span></h2>
-                    <p class="par">Choose from a wide variety of books and rent them for as long as you need, without having to worry about the high costs of purchasing them.</p>
+                    <h2><span><center>Health Care</center></span></h2>
+                    <p class="par">Doctors , Nurses , Laboratories , Medical Practitioner</p>
                 </div>
                 <div class="service-item">
                     <div class="icons">
                         <ion-icon name="heart-outline"></ion-icon>
                     </div>
-                    <h2><span><center>Recommendations</center></span></h2>
-                    <p class="par">Get personalized book recommendations from our team of experts, who will help you find your next favorite read based on your preferences.</p>
+                    <h2><span><center>Health hotline</center></span></h2>
+                    <p class="par">092345123</p>
                 </div>
                 <div class="service-item">
                     <div class="icons">
                         <ion-icon name="car-outline"></ion-icon>
                     </div>
-                    <h2><span><center>Delivery</center></span></h2>
-                    <p class="par">We deliver your rented books right to your doorstep, saving you the hassle of having to go to a bookstore and search for the books yourself.</p>
+                    <h2><span><center>Emergency Hotline</center></span></h2>
+                    <p class="par">Incase of Emergency dial M700 Palooza Health Center </p>
                 </div>
             </div>
 
