--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>About Us | Patient Palooza</title>
     <link rel="stylesheet" type="text/css" href="css/style.css?v=2" />
-    <link rel="icon" href="1.ico" type="image/x-icon">
+    <link rel="icon" href="css/1.ico" type="image/x-icon">
 </head>
 <body>
     <div class="main">
