--- a/patient/addPatient.html
+++ b/patient/addPatient.html
@@ -5,7 +5,7 @@
     <title>Register | Patient Palooza</title>
     <link rel="icon" href="1.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../css/style.css?v=2" />
-    <link rel="icon" href="1.ico" type="image/x-icon">
+    <link rel="icon" href="../css/1.ico" type="image/x-icon">
   </head>
   <body>
     <div class="main">
