--- a/bed/addBed.html
+++ b/bed/addBed.html
@@ -4,7 +4,7 @@
 
     <title>Add Doctor | Patient Palooza</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css?v=2" />
-  <link rel="icon" href="1.ico" type="image/x-icon">
+  <link rel="icon" href="../css/1.ico" type="image/x-icon">
   </head>
   <body>
     <div class="main">
