Patient is now OOP

--- a/patient/addPatient.html
+++ b/patient/addPatient.html
@@ -68,6 +68,7 @@
           <div class = "date">
             <div>
           <input type="text" id="dateRegistered" name="patientRegisteredYear" placeholder = "year"required>
+            </div>
             <div>
           <input type="text" id="dateRegistered" name="patientRegisteredMonth" placeholder = "month"required>
             </div> 
@@ -79,6 +80,7 @@
     
           <input type="hidden" name="input" value="1">
       </form>
+    
       <button class="btnn" form="addPatient" value="submit">ADD PATIENT</button>
     </div>
 
