cleaning code alittle bit, tryinh to add login

--- a/bed/addBed.html
+++ b/bed/addBed.html
@@ -46,7 +46,7 @@
     
           <input type="hidden" name="input" value="1">
         </form>
-        <button class="btnn" form="addBed" value="submit">ADD BED</button>
+        <button class="btnn" form="addBed" name="submit" value="submit">ADD BED</button>
       </div>
 
     </div>
