--- a/bed/deleteBed.html
+++ b/bed/deleteBed.html
@@ -30,7 +30,7 @@
             <input type="text" id="bedId" name="bedId" required>
             <input type="hidden" name="input" value="0">
           </form>
-          <button class="btnn" form="delBed" value="submit">Delete Bed</button>
+          <button class="btnn" form="delBed" name="submit" value="submit">Delete Bed</button>
         </div>
       </div>
     </div>
