--- a/bed/updateBed.html
+++ b/bed/updateBed.html
@@ -48,7 +48,7 @@
     
           <input type="hidden" name="input" value="2">
         </form>
-        <button class="btnn" form="updateBed" value="submit">UPDATE BED</button>
+        <button class="btnn" form="updateBed" name="submit" value="submit">UPDATE BED</button>
       </div>
 
     </div>
