--- a/doctor/addDoctor.html
+++ b/doctor/addDoctor.html
@@ -46,7 +46,7 @@
     
           <input type="hidden" name="input" value="1">
         </form>
-        <button class="btnn" form="addDoctor" value="submit">ADD DOCTOR</button>
+        <button class="btnn" form="addDoctor" name="submit" value="submit">ADD DOCTOR</button>
       </div>
 
     </div>
