--- a/doctor/deleteDoctor.html
+++ b/doctor/deleteDoctor.html
@@ -30,7 +30,7 @@
             <input type="text" id="doctorId" name="doctorId" required>
             <input type="hidden" name="input" value="0">
           </form>
-          <button class="btnn" form="delDoctor" value="submit">Delete Doctor</button>
+          <button class="btnn" form="delDoctor" name="submit" value="submit">Delete Doctor</button>
         </div>
       </div>
     </div>
