--- a/doctor/updateDoctor.html
+++ b/doctor/updateDoctor.html
@@ -48,7 +48,7 @@
     
           <input type="hidden" name="input" value="2">
         </form>
-        <button class="btnn" form="updateDoctor" value="submit">UPDATE DOCTOR</button>
+        <button class="btnn" form="updateDoctor"  name="submit" value="submit">UPDATE DOCTOR</button>
       </div>
 
     </div>
