--- a/patient/addPatient.html
+++ b/patient/addPatient.html
@@ -81,7 +81,7 @@
           <input type="hidden" name="input" value="1">
       </form>
     
-      <button class="btnn" form="addPatient" value="submit">ADD PATIENT</button>
+      <button class="btnn" form="addPatient " name="submit" value="submit">ADD PATIENT</button>
     </div>
 
     </div>
