--- a/patient/deletePatient.html
+++ b/patient/deletePatient.html
@@ -40,7 +40,7 @@
     
           <input type="hidden" name="input" value="0">
       </form>
-      <button class="btnn" form="delPatient" value="submit">Delete Patient</button>
+      <button class="btnn" form="delPatient" name="submit" value="submit">Delete Patient</button>
     </div>
 
     </div>
