--- a/patient/updatePatient.html
+++ b/patient/updatePatient.html
@@ -81,9 +81,9 @@
     
           <input type="hidden" name="input" value="2">
       </form>
-      <button class="btnn" form="updatePatient" value="submit">UPDATE PATIENT</button>
+      <button class="btnn" form="updatePatient" name="submit" value="submit">UPDATE PATIENT</button>
     </div>
-
+ 
     </div>
     </div>
   </body>
