--- a/visit/addVisit.html
+++ b/visit/addVisit.html
@@ -87,7 +87,7 @@
     
           <input type="hidden" name="input" value="1">
       </form>
-      <button class="btnn" form="addVisit" value="submit">ADD VISIT</button>
+      <button class="btnn" form="addVisit" name="submit" value="submit">ADD VISIT</button>
     </div>
 
     </div>
