--- a/visit/updateVisit.html
+++ b/visit/updateVisit.html
@@ -89,7 +89,7 @@
     
           <input type="hidden" name="input" value="2">
       </form>
-      <button class="btnn" form="updateVisit" value="submit">UPDATE VISIT</button>
+      <button class="btnn" form="updateVisit" name="submit" value="submit">UPDATE VISIT</button>
     </div>
 
     </div>
