--- a/about.html
+++ b/about.html
@@ -26,21 +26,30 @@
 	
         <div class="content">
 		<h1><span><center>About Us</center></span></h1>
-        <p class="par">Members: </p>
-        <p class="par">Mr. Paul Irvin Alas</p>
-        <p class="par">Mr.  Christian Morales</p>
+        <h2></h2>
+
+
         <h2><span><center>Project in Spe Elec 2 A</center></span></h2>
 
 	
 
 		<ul>
-				<li>Experienced professionals with expertise in various aspects</li>
-				<li>Customized solutions tailored to what you can afford</li>
-				<li>Flexible and responsive approach to find you book</li>
-				<li>Commitment to delivering high-quality services that exceed your expectations</li>
+				
 		</ul>
     </div>
 	</div>
 
 </body>
 </html>
+
+<style>
+    .main{
+      width: 100%;
+      background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.png);
+      background-position: center;
+      background-size: cover;
+      height: 120vh;
+      background-image: url("css/About.png");
+      position: relative;
+  }
+  </style>
