--- a/bed/addBed.html
+++ b/bed/addBed.html
@@ -16,10 +16,10 @@
             <div class="menu">
                 <ul>
                   <li><a href="../Index.html">HOME</a></li>
-                  <li><a href="bedList.php">SEARCH DOCTOR</a></li>
-                  <li><a href="deleteBed.html">DELETE</a></li>
-                  <li class="active">ADD</li>
-                  <li><a href="updateBed.html">UPDATE</a></li>
+                  <li><a href="bedList.php">SEARCH BED</a></li>
+                  <li><a href="deleteBed.html">DELETE BED</a></li>
+                  <li class="active">ADD BED</li>
+                  <li><a href="updateBed.html">UPDATE BED</a></li>
                 </ul>
             </div>
 
@@ -27,8 +27,8 @@
         </div> 
     <div class="content">
 
-        <h1><span>ADD DOCTOR</span></h1>
-        <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
+        <h1><span>ADD Bed</span></h1>
+        <p class="par">Enter and Request new Bed.. for Customer's request</p>
 
       <div class="formDoctorAdd">
         <form action="bed.php" method="post" id="addBed">
@@ -53,3 +53,16 @@
     </div>
   </body>
 </html>
+
+<style>
+.main{
+  width: 100%;
+  background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  background-image: url("../css/BGimage2.jpg");
+  position: relative;
+}
+
+</style>
