--- a/bed/deleteBed.html
+++ b/bed/deleteBed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Delete | Doctor Palooza</title>
+    <title>Delete | BED Palooza</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css?v=2" />
     <link rel="icon" href="../css1.ico" type="image/x-icon">
   </head>
@@ -15,15 +15,15 @@
           <ul>
             <li><a href="../Index.html">HOME</a></li>
             <li><a href="bedList.php">SEARCH BED</a></li>
-            <li class="active">DELETE</li>
-            <li><a href="addBed.html">ADD</a></li>
-            <li><a href="updateBed.html">UPDATE</a></li>
+            <li class="active">DELETE BED</li>
+            <li><a href="addBed.html">ADD BED</a></li>
+            <li><a href="updateBed.html">UPDATE BED</a></li>
           </ul>
         </div>
       </div>
       <div class="content">
-        <h1><span>Doctor Palooza</span> <br>Delete Bed Record</h1>
-        <p class="par">Delete a Doctor record from the system.<br> Are you sure you want to delete the following Doctor?</p>
+        <h1><span>BED Palooza</span> <br>Delete Bed Record</h1>
+        <p class="par">Delete a Bed record from the system.<br> Are you sure you want to delete the following Bed?</p>
         <div class=" form3 ">
           <form action="bed.php" method="post" id="delBed">
             <label for="bedId">Bed ID:</label>
@@ -36,3 +36,16 @@
     </div>
   </body>
 </html>
+
+<style>
+  .main{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    background-image: url("../css/BGimage2.jpg");
+    position: relative;
+  }
+  
+</style>
