--- a/bed/updateBed.html
+++ b/bed/updateBed.html
@@ -17,9 +17,9 @@
                 <ul>
                   <li><a href="../Index.html">HOME</a></li>
                   <li><a href="bedList.php">SEARCH BED</a></li>
-                  <li><a href="deleteBed.html">DELETE</a></li>
-                  <li><a href="addBed.html">ADD</a></li>
-                  <li class="active">UPDATE</a></li>
+                  <li><a href="deleteBed.html">DELETE BED</a></li>
+                  <li><a href="addBed.html">ADD BED</a></li>
+                  <li class="active">UPDATE BED</a></li>
                 </ul>
             </div>
 
@@ -28,7 +28,7 @@
     <div class="content">
 
         <h1><span>Update Bed Information</span></h1>
-        <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
+        <p class="par">Please enter the ID of the Bed you want to update and fill in the fields that you want to update:</p>
 
       <div class="formDoctorAdd">
         <form action="bed.php" method="post" id="updateBed">
@@ -55,3 +55,17 @@
     </div>
   </body>
 </html>
+
+
+<style>
+  .main{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    background-image: url("../css/BGimage2.jpg");
+    position: relative;
+  }
+  
+</style>
