--- a/visit/addVisit.html
+++ b/visit/addVisit.html
@@ -2,13 +2,13 @@
 <html>
   <head>
 
-    <title>Register | Patient Palooza</title>
+    <title>Register | VISIT Palooza</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css?v=2" />
   <body>
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Patient Palooza</h2>
+                <h2 class="logo">VISIT Palooza</h2>
             </div>
 
             <div class="menu">
@@ -26,9 +26,9 @@
         </div> 
     <div class="content">
 
-        <h1><span>Textbook Rentals</span> <br>Create Your Own Account!</h1>
-        <p class="par">Create Your Own Account <br>So that you can enter the world of Read-iculous, where you'll find a vast collection of enthralling stories
-            <br> a quae totam ipsa illum minus laudantium?</p>
+        <h1><span>Add Visit </span> <br>Create Your record!</h1>
+        <p class="par">Input Patient's ID <br>Input Doctor's ID
+            <br> Choose Date to Visit</p>
 
       <div class=" formVisitAdd ">
       <form action="visit.php" method="post"  id="addVisit">
@@ -94,3 +94,16 @@
     </div>
   </body>
 </html>
+
+
+<style>
+  .main{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 120vh;
+    background-image: url("../css/visit.jpg");
+    position: relative;
+}
+</style>
