--- a/visit/deleteVisit.html
+++ b/visit/deleteVisit.html
@@ -10,16 +10,16 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Patient Palooza</h2>
+                <h2 class="logo">VISIT Palooza</h2>
             </div>
 
             <div class="menu">
                 <ul>
                   <li><a href="../Index.html">HOME</a></li>
                   <li><a href="visitList.php">SEARCH VISITS</a></li>
-                  <li class="active">DELETE</li>
-                  <li><a href="addVisit.html">ADD</a></li>
-                  <li><a href="updateVisit.html">UPDATE</a></li>
+                  <li class="active">DELETE VISIT</li>
+                  <li><a href="addVisit.html">ADD VISIT</a></li>
+                  <li><a href="updateVisit.html">UPDATE VISIT</a></li>
 
                 </ul>
             </div>
@@ -28,9 +28,9 @@
         </div> 
     <div class="content">
 
-        <h1><span>Textbook Rentals</span> <br>Create Your Own Account!</h1>
-        <p class="par">Create Your Own Account <br>So that you can enter the world of Read-iculous, where you'll find a vast collection of enthralling stories
-            <br> a quae totam ipsa illum minus laudantium?</p>
+        <h1><span>DELETE VISIT</span> <br>Input Visit ID</h1>
+        <p class="par">Automatically Delete from system<br>
+            <br> </p>
 
       <div class=" form3 ">
       <form action="visit.php" method="post"  id="delVisit" >
@@ -47,3 +47,15 @@
     </div>
   </body>
 </html>
+
+<style>
+  .main{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 120vh;
+    background-image: url("../css/visit.jpg");
+    position: relative;
+}
+</style>
