--- a/doctor/addDoctor.html
+++ b/doctor/addDoctor.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,7 +9,7 @@
   <link rel="icon" href="../css1.ico" type="image/x-icon">
   </head>
   <body>
-    <div class="main">
+    <div class="main4">
         <div class="navbar">
             <div class="icon">
                 <h2 class="logo">Doctor Palooza</h2>
@@ -51,5 +53,21 @@
 
     </div>
     </div>
+
+    
   </body>
 </html>
+
+
+
+<style>
+  .main4{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 120vh;
+    background-image: url("../css/doc.jpg");
+    position: relative;
+}
+</style>
