--- a/service.html
+++ b/service.html
@@ -57,3 +57,15 @@
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
+
+<style>
+    .main{
+      width: 100%;
+      background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.jpg);
+      background-position: center;
+      background-size: cover;
+      height: 120vh;
+      background-image: url("css/BGimage3.jpg");
+      position: relative;
+  }
+  </style>
