--- a/visit/updateVisit.html
+++ b/visit/updateVisit.html
@@ -2,22 +2,22 @@
 <html>
   <head>
 
-    <title>Register | Patient Palooza</title>
+    <title>Register | VISIT Palooza</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css?v=2" />
   <body>
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Patient Palooza</h2>
+                <h2 class="logo">VISIT Palooza</h2>
             </div>
 
             <div class="menu">
                 <ul>
                   <li><a href="../Index.html">HOME</a></li>
                   <li><a href="visitList.php">SEARCH VISITS</a></li>
-                  <li><a href="deleteVisit.html">DELETE</a></li>
-                  <li><a href="addVisit.html">ADD</a></li>
-                  <li class="active">UPDATE</a></li>
+                  <li><a href="deleteVisit.html">DELETE VISIT</a></li>
+                  <li><a href="addVisit.html">ADD VISIT</a></li>
+                  <li class="active">UPDATE VISIT</a></li>
 
                 </ul>
             </div>
@@ -26,9 +26,9 @@
         </div> 
     <div class="content">
 
-        <h1><span>Textbook Rentals</span> <br>Create Your Own Account!</h1>
-        <p class="par">Create Your Own Account <br>So that you can enter the world of Read-iculous, where you'll find a vast collection of enthralling stories
-            <br> a quae totam ipsa illum minus laudantium?</p>
+        <h1><span>Update Visit Record</span> <br>Input Visit ID and </br>THE ID of Patient and the Doctor</h1>
+        <p class="par">Automatically Updated When match in the system.
+            <br> so sit back and relax</p>
 
       <div class=" formVisitAdd ">
       <form action="visit.php" method="post"  id="updateVisit">
@@ -96,3 +96,16 @@
     </div>
   </body>
 </html>
+
+
+<style>
+  .main{
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 120vh;
+    background-image: url("../css/visit.jpg");
+    position: relative;
+}
+</style>
