--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>About Us | Patient Palooza</title>
+	<title>About Us |Palooza</title>
     <link rel="stylesheet" type="text/css" href="css/style.css?v=2" />
     <link rel="icon" href="css/1.ico" type="image/x-icon">
 </head>
@@ -10,7 +10,7 @@
         <header>
 		<div class="navbar">
             <div class="icon">
-                <h2 class="logo">Patient Palooza</h2>
+                About Palooza</h2>
             </div>
 
             <div class="menu">
