--- a/service.html
+++ b/service.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Patient Palooza</h2>
+                <h2 class="logo">Service Palooza</h2>
             </div>
 
             <div class="menu">
