--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <header>
 		<div class="navbar">
             <div class="icon">
-                About Palooza</h2>
+                <h2 class="logo">About Palooza</h2>
             </div>
 
             <div class="menu">
