finished login and signup, modifying page to OOP

--- a/bed/deleteBed.html
+++ b/bed/deleteBed.html
@@ -13,7 +13,8 @@
         </div>
         <div class="menu">
           <ul>
-            <li><a href="../Index.html">HOME</a></li>
+            <li><a href="../Index.php">HOME</a></li>
+
             <li><a href="bedList.php">SEARCH BED</a></li>
             <li class="active">DELETE BED</li>
             <li><a href="addBed.html">ADD BED</a></li>
