--- a/bed/updateBed.html
+++ b/bed/updateBed.html
@@ -15,7 +15,8 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
+
                   <li><a href="bedList.php">SEARCH BED</a></li>
                   <li><a href="deleteBed.html">DELETE BED</a></li>
                   <li><a href="addBed.html">ADD BED</a></li>
