--- a/doctor/updateDoctor.html
+++ b/doctor/updateDoctor.html
@@ -15,7 +15,8 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
+
                   <li><a href="doctorList.php">SEARCH DOCTOR</a></li>
                   <li><a href="deleteDoctor.html">DELETE</a></li>
                   <li><a href="addDoctor.html">ADD</a></li>
@@ -31,7 +32,7 @@
         <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
 
       <div class="formDoctorAdd">
-        <form action="doctor.php" method="post" id="updateDoctor">
+        <form action="updateD.php" method="post" id="updateDoctor">
           <label for="doctorId">ID:</label>
           <input type="text" id="doctorId" name="doctorId" required>
 
