--- a/visit/addVisit.html
+++ b/visit/addVisit.html
@@ -13,7 +13,8 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
+
                   <li><a href="visitList.php">SEARCH VISITS</a></li>
                   <li><a href="deleteVisit.html">DELETE</a></li>
                   <li class="active">ADD</a></li>
