--- a/visit/deleteVisit.html
+++ b/visit/deleteVisit.html
@@ -15,7 +15,8 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
+
                   <li><a href="visitList.php">SEARCH VISITS</a></li>
                   <li class="active">DELETE VISIT</li>
                   <li><a href="addVisit.html">ADD VISIT</a></li>
