--- a/visit/updateVisit.html
+++ b/visit/updateVisit.html
@@ -13,7 +13,8 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
+
                   <li><a href="visitList.php">SEARCH VISITS</a></li>
                   <li><a href="deleteVisit.html">DELETE VISIT</a></li>
                   <li><a href="addVisit.html">ADD VISIT</a></li>
