--- a/doctor/addDoctor.html
+++ b/doctor/addDoctor.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -17,7 +16,7 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
                   <li><a href="doctorList.php">SEARCH DOCTOR</a></li>
                   <li><a href="deleteDoctor.html">DELETE</a></li>
                   <li class="active">ADD</li>
@@ -33,7 +32,7 @@
         <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
 
       <div class="formDoctorAdd">
-        <form action="doctor.php" method="post" id="addDoctor">
+        <form action="addD.php" method="post" id="addDoctor">
 
           <label for="doctorName">Name:</label>
           <input type="text" id="doctorName" name="doctorName" required>
