--- a/patient/addPatient.html
+++ b/patient/addPatient.html
@@ -16,7 +16,7 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
                   <li><a href="patientList.php">SEARCH PATIENT</a></li>
                   <li><a href="deletePatient.html">DELETE</a></li>
                   <li class="active">ADD</a></li>
