--- a/patient/updatePatient.html
+++ b/patient/updatePatient.html
@@ -15,7 +15,7 @@
 
             <div class="menu">
                 <ul>
-                  <li><a href="../Index.html">HOME</a></li>
+                  <li><a href="../Index.php">HOME</a></li>
                   <li><a href="patientList.php">SEARCH PATIENT</a></li>
                   <li><a href="deletePatient.html">DELETE</a></li>
                   <li><a href="addPatient.html">ADD</a></li>
