finished error handling and OOP

--- a/bed/deleteBed.html
+++ b/bed/deleteBed.html
@@ -26,7 +26,7 @@
         <h1><span>BED Palooza</span> <br>Delete Bed Record</h1>
         <p class="par">Delete a Bed record from the system.<br> Are you sure you want to delete the following Bed?</p>
         <div class=" form3 ">
-          <form action="bed.php" method="post" id="delBed">
+          <form action="deleteB.php" method="post" id="delBed">
             <label for="bedId">Bed ID:</label>
             <input type="text" id="bedId" name="bedId" required>
             <input type="hidden" name="input" value="0">
