--- a/bed/updateBed.html
+++ b/bed/updateBed.html
@@ -32,7 +32,7 @@
         <p class="par">Please enter the ID of the Bed you want to update and fill in the fields that you want to update:</p>
 
       <div class="formDoctorAdd">
-        <form action="bed.php" method="post" id="updateBed">
+        <form action="updateB.php" method="post" id="updateBed">
           <label for="bedId">BED ID:</label>
           <input type="text" id="bedId" name="bedId" required>
 
