--- a/patient/addPatient.html
+++ b/patient/addPatient.html
@@ -34,7 +34,7 @@
             <br> a quae totam ipsa illum minus laudantium?</p>
 
       <div class=" form1 ">
-      <form action="patient.php" method="post"  id="addPatient">
+      <form action="addP.php" method="post"  id="addPatient">
 
 
           <label for="patientName">Name:</label>
@@ -81,7 +81,7 @@
           <input type="hidden" name="input" value="1">
       </form>
     
-      <button class="btnn" form="addPatient " name="submit" value="submit">ADD PATIENT</button>
+      <button class="btnn" form="addPatient" name="submit" value="submit">ADD PATIENT</button>
     </div>
 
     </div>
