--- a/patient/deletePatient.html
+++ b/patient/deletePatient.html
@@ -33,7 +33,7 @@
             <br> a quae totam ipsa illum minus laudantium?</p>
 
       <div class=" form3 ">
-      <form action="patient.php" method="post"  id="delPatient" >
+      <form action="deleteP.php" method="post"  id="delPatient" >
       
           <label for="patientId">Input Patient Id:</label>
           <input type="text" id="patientId" name="patientId" required>
