--- a/patient/updatePatient.html
+++ b/patient/updatePatient.html
@@ -33,7 +33,7 @@
             <br> a quae totam ipsa illum minus laudantium?</p>
 
       <div class=" form4 ">
-      <form action="patient.php" method="post"  id="updatePatient">
+      <form action="updateP.php" method="post"  id="updatePatient">
 
          <label for="patientId">ID:</label>
           <input type="text" id="patientId" name="patientId" required>
