--- a/visit/addVisit.html
+++ b/visit/addVisit.html
@@ -32,7 +32,7 @@
             <br> Choose Date to Visit</p>
 
       <div class=" formVisitAdd ">
-      <form action="visit.php" method="post"  id="addVisit">
+      <form action="addV.php" method="post"  id="addVisit">
 
 
           <label for="patientId">Patient ID:</label>
