--- a/visit/deleteVisit.html
+++ b/visit/deleteVisit.html
@@ -34,7 +34,7 @@
             <br> </p>
 
       <div class=" form3 ">
-      <form action="visit.php" method="post"  id="delVisit" >
+      <form action="deleteV.php" method="post"  id="delVisit" >
       
           <label for="visitId">Input visit Id:</label>
           <input type="text" id="visitId" name="visitId" required>
