--- a/visit/updateVisit.html
+++ b/visit/updateVisit.html
@@ -32,7 +32,7 @@
             <br> so sit back and relax</p>
 
       <div class=" formVisitAdd ">
-      <form action="visit.php" method="post"  id="updateVisit">
+      <form action="updateV.php" method="post"  id="updateVisit">
 
           <label for="visitId">Visit ID:</label>
           <input type="text" id="visitId" name="visitId"required>
