--- a/bed/addBed.html
+++ b/bed/addBed.html
@@ -32,7 +32,7 @@
         <p class="par">Enter and Request new Bed.. for Customer's request</p>
 
       <div class="formDoctorAdd">
-        <form action="bed.php" method="post" id="addBed">
+        <form action="addB.php" method="post" id="addBed">
 
           <label for="bedName">Bed Name:</label>
           <input type="text" id="bedName" name="bedName" required>
