--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="Index.html">HOME</a></li>
+                    <li><a href="Index.php">HOME</a></li>
                     <li class="active">ABOUT</a></li>
                     <li><a href="service.html">SERVICE</a></li>
                 </ul>
