--- a/service.html
+++ b/service.html
@@ -15,7 +15,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="Index.html">HOME</a></li>
+                    <li><a href="Index.php">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="active">SERVICE</a></li>
                 </ul>
