--- a/patient/addPatient.html
+++ b/patient/addPatient.html
@@ -29,9 +29,9 @@
         </div> 
     <div class="content">
 
-        <h1><span>Textbook Rentals</span> <br>Create Your Own Account!</h1>
-        <p class="par">Create Your Own Account <br>So that you can enter the world of Read-iculous, where you'll find a vast collection of enthralling stories
-            <br> a quae totam ipsa illum minus laudantium?</p>
+        <h1><span>Add Patient</span> <br>Create patient</h1>
+        <p class="par">Input Patient Name <br>Credentials and Click Add patient</br></p>
+            <br> Caritas en scientia</p>
 
       <div class=" form1 ">
       <form action="addP.php" method="post"  id="addPatient">
