added login for doctor and user with ui

--- a/doctor/updateDoctor.html
+++ b/doctor/updateDoctor.html
@@ -31,14 +31,16 @@
         <h1><span>Update Doctor Information</span></h1>
         <p class="par">Please enter the ID of the doctor you want to update and fill in the fields that you want to update:</p>
 
-      <div class="formDoctorAdd">
+      <div class="formDoctorAdd2">
         <form action="updateD.php" method="post" id="updateDoctor">
           <label for="doctorId">ID:</label>
           <input type="text" id="doctorId" name="doctorId" required>
 
           <label for="doctorName">Name:</label>
           <input type="text" id="doctorName" name="doctorName">
-      
+             
+          <label for="doctorPass">Password:</label>
+          <input type="password" id="doctorPass" name="doctorPass"required>
    
           <label for="doctorAddress">Address:</label>
           <input type="text" id="doctorAddress" name="doctorAddress">
